--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000/",
+  "//proxy-local": "http://127.0.0.1:5000/",
+  "proxy": "https://ssn-oms-backend.onrender.com/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
